@@ -2,10 +2,13 @@ package com.checkitout.ijoa.fairytale.service;
 
 import static com.checkitout.ijoa.exception.ErrorCode.FAIRYTALE_NOT_FOUND;
 import static com.checkitout.ijoa.exception.ErrorCode.FAIRYTALE_PAGE_NOT_FOUND;
+import static com.checkitout.ijoa.exception.ErrorCode.PAGE_HISTORY_ACCESS_DENIED;
+import static com.checkitout.ijoa.exception.ErrorCode.PAGE_HISTORY_NOT_FOUND;
 import static java.time.LocalDateTime.now;
 
 import com.checkitout.ijoa.child.domain.Child;
 import com.checkitout.ijoa.exception.CustomException;
+import com.checkitout.ijoa.fairytale.domain.EyeTrackingData;
 import com.checkitout.ijoa.fairytale.domain.Fairytale;
 import com.checkitout.ijoa.fairytale.domain.FairytalePageContent;
 import com.checkitout.ijoa.fairytale.domain.PageHistory;
@@ -13,12 +16,13 @@ import com.checkitout.ijoa.fairytale.dto.FairytalePageListResponse;
 import com.checkitout.ijoa.fairytale.dto.FairytalePageViewResponse;
 import com.checkitout.ijoa.fairytale.dto.PageHistoryCreationRequest;
 import com.checkitout.ijoa.fairytale.dto.PageHistoryCreationResponse;
+import com.checkitout.ijoa.fairytale.repository.EyeTrackingDataRepository;
 import com.checkitout.ijoa.fairytale.repository.FairytalePageContentRepository;
 import com.checkitout.ijoa.fairytale.repository.FairytaleRepository;
 import com.checkitout.ijoa.fairytale.repository.PageHistoryRepository;
 import com.checkitout.ijoa.util.SecurityUtil;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -29,6 +33,7 @@ public class FairytaleService {
     private final FairytaleRepository fairytaleRepository;
     private final FairytalePageContentRepository fairytalePageContentRepository;
     private final PageHistoryRepository pageHistoryRepository;
+    private final EyeTrackingDataRepository eyeTrackingDataRepository;
     private final SecurityUtil securityUtil;
 
     /**
@@ -44,6 +49,7 @@ public class FairytaleService {
     /**
      * 동화책 특정 페이지 조회
      */
+    @Transactional
     public FairytalePageViewResponse getFairytalePage(Long fairytaleId, Integer pageNumber) {
         Fairytale fairytale = getFairytaleById(fairytaleId);
         FairytalePageContent fairytalePageContent = getFairytalePageContent(fairytale, pageNumber);
@@ -54,13 +60,21 @@ public class FairytaleService {
         return FairytalePageViewResponse.of(fairytalePageContent, pageHistory);
     }
 
-    public PageHistoryCreationResponse createPageHistory(Long fairytaleId, PageHistoryCreationRequest request) {
-        Fairytale fairytale = getFairytaleById(fairytaleId);
+    /**
+     * 동화책 특정 페이지 시선추적 데이터 저장
+     */
+    @Transactional
+    public PageHistoryCreationResponse createPageHistory(Long pageHistoryId, PageHistoryCreationRequest request) {
+        PageHistory pageHistory = getPageHistoryById(pageHistoryId);
+        Child child = securityUtil.getChildByToken();
 
-//        securityUtil.getUserByToken();
+        validatePageHistoryAccess(pageHistory, child);
 
-        return PageHistoryCreationResponse.test();
+        EyeTrackingData eyeTrackingData = eyeTrackingDataRepository.save(request.toEntity(pageHistory));
+
+        return PageHistoryCreationResponse.from(eyeTrackingData);
     }
+
 
     /**
      * 동화책 조회
@@ -70,10 +84,13 @@ public class FairytaleService {
                 .orElseThrow(() -> new CustomException(FAIRYTALE_NOT_FOUND));
     }
 
+    /**
+     * 동화책 페이지 목록 DTO 변환
+     */
     private List<FairytalePageListResponse> convertToFairytalePageListResponse(Fairytale fairytale) {
         return fairytale.getFairytalePageImages().stream()
                 .map(FairytalePageListResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -82,5 +99,22 @@ public class FairytaleService {
     private FairytalePageContent getFairytalePageContent(Fairytale fairytale, Integer pageNumber) {
         return fairytalePageContentRepository.findByFairytaleAndPageNumber(fairytale, pageNumber)
                 .orElseThrow(() -> new CustomException(FAIRYTALE_PAGE_NOT_FOUND));
+    }
+
+    /**
+     * 페이지 기록 조회
+     */
+    private PageHistory getPageHistoryById(Long pageHistoryId) {
+        return pageHistoryRepository.findById(pageHistoryId)
+                .orElseThrow(() -> new CustomException(PAGE_HISTORY_NOT_FOUND));
+    }
+
+    /**
+     * 페이지 기록 접근 권한 검증
+     */
+    private void validatePageHistoryAccess(PageHistory pageHistory, Child child) {
+        if (!Objects.equals(pageHistory.getChild().getId(), child.getId())) {
+            throw new CustomException(PAGE_HISTORY_ACCESS_DENIED);
+        }
     }
 }
